#15795 - scrollbar-gutter fix + padding-x

--- a/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_megamenu.scss
+++ b/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_megamenu.scss
@@ -7,6 +7,7 @@
 		box-shadow: 0 0.5rem 0.5rem rgba($black, .08);
 		max-height: 70vh;
 		overflow-y: auto;
+		scrollbar-gutter: stable both-edges;
 	}
 }
 
